link category titles

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/brienne_letter.JPG" alt="Unlocking History" style="width:100%">
                 </a>
             </div>
-            <h2>Unlocking History</h2>
+            <h2><a class="inactive" href="/unlocking-history">Unlocking History</a></h2>
         </div>
     </div>
     <div class="column_grid">
@@ -44,7 +44,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/sla_bridge.JPG" alt="Topological Optimization" style="width:100%">
                 </a>
             </div>
-            <h2>Topological Optimization</h2>
+            <h2><a class="inactive" href="/topological-optimization">Topological Optimization</a></h2>
         </div>
     </div>
     <!-- END GRID -->
