--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -13,7 +13,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/schematic.png" alt="Image Processing" style="width:100%">
                 </a>
             </div>
-            <h2>Image Processing with a Microcontroller (Age 19)</h2>
+            <h2><a class="inactive" href="/minor-projects/image-processing">Image Processing with a Microcontroller (Age 19)</a></h2>
         </div>
     </div>
     <div class="column_grid">
@@ -23,7 +23,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/6336.png" alt="Numerical Modeling" style="width:100%">
                 </a>
             </div>
-            <h2>Carotid Artery Pressure Estimation (Age 19)</h2>
+            <h2><a class="inactive" href="/minor-projects/numerical-modeling">Carotid Artery Pressure Estimation (Age 19)</a></h2>
         </div>
     </div>
     <div class="column_grid">
@@ -33,7 +33,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/temp.png" alt="Robotic Locomotion" style="width:100%">
                 </a>
             </div>
-            <h2>Robotic Locomotion (Age 17)</h2>
+            <h2><a class="inactive" href="/minor-projects/robotic-locomotion">Robotic Locomotion (Age 17)</a></h2>
         </div>
     </div>
     <div class="column_grid">
@@ -43,7 +43,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/gol.png" alt="Game of Life" style="width:100%">
                 </a>
             </div>
-            <h2>Conway's Game of Life (Age 15)</h2>
+            <h2><a class="inactive" href="/minor-projects/game-of-life">Conway's Game of Life (Age 15)</a></h2>
         </div>
     </div>
     <div class="column_grid">
@@ -53,7 +53,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/comp_cardiology.png" alt="Computational Cardiology" style="width:100%">
                 </a>
             </div>
-            <h2>Computational Cardiology (Age 14)</h2>
+            <h2><a class="inactive" href="/minor-projects/computational-cardiology">Computational Cardiology (Age 14)</a></h2>
         </div>
     </div>
     <div class="column_grid">
@@ -63,7 +63,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/stitches.png" alt="Sewing Science" style="width:100%">
                 </a>
             </div>
-            <h2>Sewing Science (Age 13)</h2>
+            <h2><a class="inactive" href="/minor-projects/sewing-science">Sewing Science (Age 13)</a></h2>
         </div>
     </div>
     <div class="column_grid">
@@ -73,7 +73,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/cut.png" alt="Billiard Bots" style="width:100%">
                 </a>
             </div>
-            <h2>Billiard Bots (Age 12)</h2>
+            <h2><a class="inactive" href="/minor-projects/billiard-bots">Billiard Bots (Age 12)</a></h2>
         </div>
     </div>
     <!-- END GRID -->
