added google scholar link

--- a/about/index.html
+++ b/about/index.html
@@ -21,4 +21,5 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     <a href="mailto:hjackson@mit.edu" target="_blank"><img class="social" src="/images/email.png"></a>
     <a href="https://github.com/hollyjackson" target="_blank"><img class="social" src="/images/github_icon.png"></a>
     <a href="https://www.linkedin.com/in/holly-jackson-481005199/" target="_blank"><img class="social" src="/images/linkedin_icon.png"></a>
+    <a href="https://scholar.google.com/citations?user=QnYHj40AAAAJ&hl=en&citsig=AMD79orj1isW6j7rgH7WmG8gTX7wbLFfBA" target="_blank"><img class="social" src="/images/google_scholar.png"></a>
 </div>
