minor format fix robo locomotion

--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -30,7 +30,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/robotic-locomotion">
-                    <img src="/images/lattice.png" alt="Robotic Locomotion" style="width:100%">
+                    <img src="/images/lattice_white.png" alt="Robotic Locomotion" style="width:100%">
                 </a>
             </div>
             <h2><a class="inactive" href="/minor-projects/robotic-locomotion">Robotic Locomotion (Age 17)</a></h2>
