--- a/minor-projects/robotic-locomotion/index.html
+++ b/minor-projects/robotic-locomotion/index.html
@@ -23,27 +23,27 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 
 <h3 style="text-align:center">Minimal Stimulus Attachment</h3>
 
-<p style="text-align:center;">In order to ease and hasten robotic assembly, I designed attachment mechanisms for a vertex-adjacent, vertex-attached octahedral lattice. The attachment mechanisms would allow up to five nodes to be locked in place with a single rotation. The design was inspired by Penrose's self-assembling mechanisms.</p>
+<p style="text-align:left;">In order to ease and hasten robotic assembly, I designed attachment mechanisms for a vertex-adjacent, vertex-attached octahedral lattice. The attachment mechanisms would allow up to five nodes to be locked in place with a single rotation. The design was inspired by Penrose's self-assembling mechanisms.</p>
 
-<p style="text-align:center;">The minimal stimulus voxel consisted of two different attachment mechanisms. At the top and bottom, a friction-fit, genderless "twist" node helps correct for misalignment during the initial voxel placement.  At the remaining four nodes, friction-fit, genderless "claws" lock in place as the voxel is rotated by the robotic assembler. The complete voxel design is shown below.</p>
+<p style="text-align:left;">The minimal stimulus voxel consisted of two different attachment mechanisms. At the top and bottom, a friction-fit, genderless "twist" node helps correct for misalignment during the initial voxel placement.  At the remaining four nodes, friction-fit, genderless "claws" lock in place as the voxel is rotated by the robotic assembler. The complete voxel design is shown below.</p>
 
 <div class="content">
-    <img class="slides" src="/minor-projects/robotic-locomotion/voxel.png" alt="Voxel" style="width:30%">
-    <p style="text-align:left;">Minimal stimulus attachment design.</p>
+    <img class="slides" src="/minor-projects/robotic-locomotion/voxel.png" alt="Voxel" style="width:50%">
+    <p style="text-align:center;">Minimal stimulus attachment design.</p>
 </div>
 
 <br>
 
 <div class="content">
-    <video width="560" height="315" controls>
+    <video class='center' width="560" height="315" autoplay>
         <source src="/minor-projects/robotic-locomotion/voxel_twist_demo.mp4" type="video/mp4">
     </video>
-    <p style="text-align:left;">2x2 minimal stimulus lattice assembly.</p>
+    <p style="text-align:center;">2x2 minimal stimulus lattice assembly.</p>
 </div>
 
 <br><br>
 
-<p style="text-align:center;">The design is advantageous because of its genderless nodes, ability to correct for misalignment, and ability to lock in place with one simple movement. However, these minimal stimulus attachments give the voxel an orientation (a top/bottom vs. side) because two different types of connectors are used.  Additionally, these attachments may not be robust enough since they are held together solely by friction.</p>
+<p style="text-align:left;">The design is advantageous because of its genderless nodes, ability to correct for misalignment, and ability to lock in place with one simple movement. However, these minimal stimulus attachments give the voxel an orientation (a top/bottom vs. side) because two different types of connectors are used.  Additionally, these attachments may not be robust enough since they are held together solely by friction.</p>
 
 <div class="content">
     <img class="slides" src="/minor-projects/robotic-locomotion/voxel_print.JPG" alt="3D Printed Voxels" style="width:80%">
@@ -54,12 +54,12 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 
 <h3 style="text-align:center">Worm-Like Robot</h3>
 
-<p style="text-align:center;">As part of a larger investigation on different mechanisms for robotic locomotion on a lattice, I designed and prototyped a worm-like locomotion system. Inspired by continuum robotics, I prototyped two designs as a proof-of-concept of the different locomotion steps a worm-like robot could achieve.</p>
+<p style="text-align:left;">As part of a larger investigation on different mechanisms for robotic locomotion on a lattice, I designed and prototyped a worm-like locomotion system. Inspired by continuum robotics, I prototyped two designs as a proof-of-concept of the different locomotion steps a worm-like robot could achieve.</p>
 
-<p style="text-align:center;">I first prototyped a robot that showed a simple inchworm behavior (shown below). The robot compressed and expanded in order to linear traverse a surface.</p>
+<p style="text-align:left;">I first prototyped a robot that showed a simple inchworm behavior (shown below). The robot compressed and expanded in order to linear traverse a surface.</p>
 
 <div class="content">
-    <video width="560" height="315" controls>
+    <video class='center' width="560" height="315" autoplay>
         <source src="/minor-projects/robotic-locomotion/inchworm.mp4" type="video/mp4">
     </video>
     <p style="text-align:left;">Inchworm robot in motion.</p>
@@ -67,20 +67,20 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 
 <br><br>
 
-<p style="text-align:center;">Next, I prototyped a robot with more complex behavior. In addition to the simple compression and expansions maneuver, this worm-bot could curve upwards, downwards, left, and right. It also could combine any of these six motions to create intermediate steps.</p>
+<p style="text-align:left;">Next, I prototyped a robot with more complex behavior. In addition to the simple compression and expansions maneuver, this worm-bot could curve upwards, downwards, left, and right. It also could combine any of these six motions to create intermediate steps.</p>
 
 <div class="content">
-    <video width="560" height="315" controls>
+    <video class='center' width="560" height="315" autoplay>
         <source src="/minor-projects/robotic-locomotion/wormbot.mp4" type="video/mp4">
     </video>
-    <p style="text-align:left;">Worm-bot in motion.</p>
+    <p style="text-align:center;">Worm-bot in motion.</p>
 </div>
 
 <br><br>
 
-<p style="text-align:center;">I performed an in-depth locomotion analysis of the second robot, which can be accessed <a class="active" href="/minor-projects/robotic-locomotion/LocomotionAnalysisWorm_HMJ.pdf" target="_blank">here</a>.</p>
+<p style="text-align:left;">I performed an in-depth locomotion analysis of the second robot, which can be accessed <a class="active" href="/minor-projects/robotic-locomotion/LocomotionAnalysisWorm_HMJ.pdf" target="_blank">here</a>.</p>
 
 <div class="content">
     <img class="slides" src="/minor-projects/robotic-locomotion/wormbot_locomotion.png" alt="Locomotion" style="width:100%">
-    <p style="text-align:left;">Two-dimensional overview of the dynamics of four of the five key locomotion requirements of wormbot with unique key states highlighted.</p>
+    <p style="text-align:center;">Two-dimensional overview of the dynamics of four of the five key locomotion requirements of wormbot with unique key states highlighted.</p>
 </div>
