--- a/minor-projects/robotic-locomotion/index.html
+++ b/minor-projects/robotic-locomotion/index.html
@@ -28,16 +28,16 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 <p style="text-align:left;">The minimal stimulus voxel consisted of two different attachment mechanisms. At the top and bottom, a friction-fit, genderless "twist" node helps correct for misalignment during the initial voxel placement.  At the remaining four nodes, friction-fit, genderless "claws" lock in place as the voxel is rotated by the robotic assembler. The complete voxel design is shown below.</p>
 
 <div class="content">
-    <img class="slides" src="/minor-projects/robotic-locomotion/voxel.png" alt="Voxel" style="width:50%">
+    <img class="slides" src="/minor-projects/robotic-locomotion/voxel.png" alt="Voxel" style="width:40%">
     <p style="text-align:center;">Minimal stimulus attachment design.</p>
 </div>
 
 <br>
 
 <div class="content">
-    <video class='center' width="560" height="315" autoplay>
-        <source src="/minor-projects/robotic-locomotion/voxel_twist_demo.mp4" type="video/mp4">
-    </video>
+    <div class="video-container" align="center">
+        <iframe width="560" height="315" src="/minor-projects/robotic-locomotion/voxel_twist_demo.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <p style="text-align:center;">2x2 minimal stimulus lattice assembly.</p>
 </div>
 
@@ -59,9 +59,9 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 <p style="text-align:left;">I first prototyped a robot that showed a simple inchworm behavior (shown below). The robot compressed and expanded in order to linear traverse a surface.</p>
 
 <div class="content">
-    <video class='center' width="560" height="315" autoplay>
-        <source src="/minor-projects/robotic-locomotion/inchworm.mp4" type="video/mp4">
-    </video>
+    <div class="video-container" align="center">
+        <iframe width="560" height="315" src="/minor-projects/robotic-locomotion/inchworm.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <p style="text-align:left;">Inchworm robot in motion.</p>
 </div>
 
@@ -70,10 +70,10 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 <p style="text-align:left;">Next, I prototyped a robot with more complex behavior. In addition to the simple compression and expansions maneuver, this worm-bot could curve upwards, downwards, left, and right. It also could combine any of these six motions to create intermediate steps.</p>
 
 <div class="content">
-    <video class='center' width="560" height="315" autoplay>
-        <source src="/minor-projects/robotic-locomotion/wormbot.mp4" type="video/mp4">
-    </video>
-    <p style="text-align:center;">Worm-bot in motion.</p>
+    <div class="video-container" align="center">
+        <iframe width="560" height="315" src="/minor-projects/robotic-locomotion/wormbot.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <p style="text-align:left;">Worm-bot in motion.</p>
 </div>
 
 <br><br>
@@ -82,5 +82,5 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 
 <div class="content">
     <img class="slides" src="/minor-projects/robotic-locomotion/wormbot_locomotion.png" alt="Locomotion" style="width:100%">
-    <p style="text-align:center;">Two-dimensional overview of the dynamics of four of the five key locomotion requirements of wormbot with unique key states highlighted.</p>
+    <p style="text-align:left;">Two-dimensional overview of the dynamics of four of the five key locomotion requirements of wormbot with unique key states highlighted.</p>
 </div>
