centering text fixes robo locomotion

--- a/minor-projects/robotic-locomotion/index.html
+++ b/minor-projects/robotic-locomotion/index.html
@@ -41,13 +41,13 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     <p style="text-align:center;">2x2 minimal stimulus lattice assembly.</p>
 </div>
 
-<br><br>
+<br>
 
 <p style="text-align:left;">The design is advantageous because of its genderless nodes, ability to correct for misalignment, and ability to lock in place with one simple movement. However, these minimal stimulus attachments give the voxel an orientation (a top/bottom vs. side) because two different types of connectors are used.  Additionally, these attachments may not be robust enough since they are held together solely by friction.</p>
 
 <div class="content">
     <img class="slides" src="/minor-projects/robotic-locomotion/voxel_print.JPG" alt="3D Printed Voxels" style="width:80%">
-    <p style="text-align:left;">Prototype of voxels with minimal stimulus attachments.</p>
+    <p style="text-align:center;">Prototype of voxels with minimal stimulus attachments.</p>
 </div>
 
 <br><br>
@@ -62,10 +62,10 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     <div class="video-container" align="center">
         <iframe width="560" height="315" src="/minor-projects/robotic-locomotion/inchworm.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <p style="text-align:left;">Inchworm robot in motion.</p>
+    <p style="text-align:center;">Inchworm robot in motion.</p>
 </div>
 
-<br><br>
+<br>
 
 <p style="text-align:left;">Next, I prototyped a robot with more complex behavior. In addition to the simple compression and expansions maneuver, this worm-bot could curve upwards, downwards, left, and right. It also could combine any of these six motions to create intermediate steps.</p>
 
@@ -73,14 +73,14 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     <div class="video-container" align="center">
         <iframe width="560" height="315" src="/minor-projects/robotic-locomotion/wormbot.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <p style="text-align:left;">Worm-bot in motion.</p>
+    <p style="text-align:center;">Worm-bot in motion.</p>
 </div>
 
-<br><br>
+<br>
 
 <p style="text-align:left;">I performed an in-depth locomotion analysis of the second robot, which can be accessed <a class="active" href="/minor-projects/robotic-locomotion/LocomotionAnalysisWorm_HMJ.pdf" target="_blank">here</a>.</p>
 
 <div class="content">
     <img class="slides" src="/minor-projects/robotic-locomotion/wormbot_locomotion.png" alt="Locomotion" style="width:100%">
-    <p style="text-align:left;">Two-dimensional overview of the dynamics of four of the five key locomotion requirements of wormbot with unique key states highlighted.</p>
+    <p style="text-align:center;">Two-dimensional overview of the dynamics of four of the five key locomotion requirements of wormbot with unique key states highlighted.</p>
 </div>
