--- a/bezier-curves/index.html
+++ b/bezier-curves/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Unlocking History"
+title: "Deep Learning Over Bezier Curves"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/publications">Publications</a><a href="/about">About</a>
 footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 ---
