--- a/minor-projects/billiard-bots/index.html
+++ b/minor-projects/billiard-bots/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "Billiard Bots"
-menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
+menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/publications">Publications</a><a href="/about">About</a>
 footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 ---
 
