--- a/publications/index.html
+++ b/publications/index.html
@@ -9,7 +9,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 <div class="row_grid">
     <div class="column_grid left">
         <div class="content">
-            <img class="slides" src="evol_traits.JPG" alt="Stellar Evolution" style="width:100%">
+            <img class="slides" src="evol_trait.JPG" alt="Stellar Evolution" style="width:100%">
         </div>
     </div>
     <div class="column_grid right">
