--- a/cosmic-phylogeny/index.html
+++ b/cosmic-phylogeny/index.html
@@ -5,6 +5,13 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 ---
 
+<div class="content">
+    <img class="slides" src="/cosmic-phylogeny/tree_cj.png" alt="Stylized Tree" style="width:100%">
+    <p style="text-align:left;">A stylized version of a stellar evolutionary tree from our most recent publication.  Design by Carolina Jofré.</p>
+</div>
+
+<br><br>
+
 <div class="row_grid">
     <div class="column_grid left">
         <div class="content">
@@ -13,8 +20,8 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     </div>
     <div class="column_grid right">
         <div class="content">
-            <p style="text-align:left">I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.</p>
-            <p style="text-align:left">I collaborate with <a href="http://www.paulajofre.com/" target="_blank">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
+            <p style="text-align:left">I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.  I collaborate with <a href="http://www.paulajofre.com/" target="_blank">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
+            <p style="text-align:left">Most recently, we've built a family tree of the Milky Way, featured in the <a href="https://news.mit.edu/2020/qa-holly-jackson-building-cosmic-family-tree-1214" target="_blank">MIT News</a>.</p>
         </div>
     </div>
     <div class="column_grid left">
@@ -23,6 +30,13 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         </div>
     </div>
     <div class="column_grid right">
+        <div class="content">
+            <p style="text-align:left;"><a style="font-weight:bold;">Using heritability of stellar chemistry to reveal the history of the Milky Way</a><br>
+                Holly Jackson, <a style="color:#505050;">Paula Jofré, Keaghan Yaxley, Payel Das, Danielle de Brito Silva, Robert Foley</a><br>
+                In review at <a style="font-style:italic;">Monthly Notices of the Royal Astronomical Society</a><br>
+                <a href="https://arxiv.org/abs/2011.06453" target="_blank">Pre-print</a></p>
+        </div>
+        <br>
         <div class="content">
             <p style="text-align:left;"><a style="font-weight:bold;">Traits for chemical evolution in solar twins</a><br>
             Trends of neutron-capture elements with stellar age<br>
