--- a/publications/index.html
+++ b/publications/index.html
@@ -9,6 +9,19 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 <div class="row_grid">
     <div class="column_grid left">
         <div class="content">
+            <img class="slides" src="cosmic_phylo.png" alt="Cosmic Phylogeny" style="width:80%">
+        </div>
+    </div>
+    <div class="column_grid right">
+        <div class="content">
+            <p style="text-align:left;"><a style="font-weight:bold;">Using heritability of stellar chemistry to reveal the history of the Milky Way</a><br>
+                Holly Jackson, <a style="color:#505050;">Paula Jofré, Keaghan Yaxley, Payel Das, Danielle de Brito Silva, Robert Foley</a><br>
+                In review at <a style="font-style:italic;">Monthly Notices of the Royal Astronomical Society</a><br>
+                <a href="https://arxiv.org/abs/2011.06453" target="_blank">Pre-print</a></p>
+        </div>
+    </div>
+    <div class="column_grid left">
+        <div class="content">
             <img class="slides" src="evol_trait.JPG" alt="Stellar Evolution" style="width:80%">
         </div>
     </div>
