--- a/unlocking-history/index.html
+++ b/unlocking-history/index.html
@@ -5,4 +5,8 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 ---
 
-<p>coming soon...</p>
+<p>Coming soon...</p>
+
+<br><br>
+
+<p>For now, feel free to check out <a href="http://letterlocking.org/" target="_blank">letterlocking.org</a></p>
