--- a/unlocking-history/index.html
+++ b/unlocking-history/index.html
@@ -9,4 +9,4 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 
 <br><br>
 
-<p>For now, feel free to check out <a href="http://letterlocking.org/" target="_blank">letterlocking.org</a></p>
+<p>For now, feel free to check out <a href="http://letterlocking.org/" target="_blank">letterlocking.org</a>.</p>
