fixed publications images

--- a/publications/index.html
+++ b/publications/index.html
@@ -9,7 +9,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 <div class="row_grid">
     <div class="column_grid left">
         <div class="content">
-            <img class="slides" src="cosmic_phylo.png" alt="Cosmic Phylogeny" style="width:80%">
+            <img class="slides" src="radiation_tree.png" alt="Cosmic Phylogeny" style="width:80%">
         </div>
     </div>
     <div class="column_grid right">
