--- a/cosmic-phylogeny/index.html
+++ b/cosmic-phylogeny/index.html
@@ -7,7 +7,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 
 <div class="content">
     <img class="slides" src="/cosmic-phylogeny/tree_cj.png" alt="Stylized Tree" style="width:100%">
-    <p font-size=0.75em style="text-align:right;">A stylized version of a stellar evolutionary tree from our most recent publication.  Picture design by Carolina Jofré.</p>
+    <caption>A stylized version of a stellar evolutionary tree from our most recent publication.  Picture design by Carolina Jofré.</caption>
 </div>
 
 <br><br>
