adding automatic-differentiation section, updated publications, updated resume

--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -9,11 +9,21 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
+                <a href="/minor-projects/automatic-differentiation">
+                    <img src="/images/schematic.png" alt="Automatic Differentiation" style="width:100%">
+                </a>
+            </div>
+            <h2><a class="inactive" href="/minor-projects/automatic-differentiation">Sparsity-Based Mixed Mode Automatic Differentiation</a></h2>
+        </div>
+    </div>
+    <div class="column_grid">
+        <div class="content">
+            <div class="img-hover-zoom">
                 <a href="/minor-projects/image-processing">
                     <img src="/images/schematic.png" alt="Image Processing" style="width:100%">
                 </a>
             </div>
-            <h2><a class="inactive" href="/minor-projects/image-processing">Image Processing with a Microcontroller (Age 19)</a></h2>
+            <h2><a class="inactive" href="/minor-projects/image-processing">Image Processing with a Microcontroller</a></h2>
         </div>
     </div>
     <div class="column_grid">
@@ -23,7 +33,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/6336.png" alt="Numerical Modeling" style="width:100%">
                 </a>
             </div>
-            <h2><a class="inactive" href="/minor-projects/numerical-modeling">Carotid Artery Pressure Estimation (Age 19)</a></h2>
+            <h2><a class="inactive" href="/minor-projects/numerical-modeling">Carotid Artery Pressure Estimation</a></h2>
         </div>
     </div>
     <div class="column_grid">
