--- a/publications/index.html
+++ b/publications/index.html
@@ -16,8 +16,9 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <p style="text-align:left;"><a style="font-weight:bold;">Using heritability of stellar chemistry to reveal the history of the Milky Way</a><br>
                 Holly Jackson, <a style="color:#505050;">Paula Jofré, Keaghan Yaxley, Payel Das, Danielle de Brito Silva, Robert Foley</a><br>
-                In review at <a style="font-style:italic;">Monthly Notices of the Royal Astronomical Society</a><br>
+                <a style="font-style:italic;">Monthly Notices of the Royal Astronomical Society 2021</a><br>
                 <a href="https://arxiv.org/abs/2011.06453" target="_blank">Pre-print</a></p>
+                <a href="https://academic.oup.com/mnras/advance-article-abstract/doi/10.1093/mnras/staa4028/6081048" target="_blank">Paper</a></p> | <a href="https://arxiv.org/abs/2011.06453" target="_blank">Pre-print</a></p>
         </div>
     </div>
     <div class="column_grid left">
