--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -10,7 +10,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/automatic-differentiation">
-                    <img src="/images/schematic.png" alt="Automatic Differentiation" style="width:100%">
+                    <img src="/images/matrix_sparsity.png" alt="Automatic Differentiation" style="width:100%">
                 </a>
             </div>
             <h2><a class="inactive" href="/minor-projects/automatic-differentiation">Sparsity-Based Mixed Mode Automatic Differentiation</a></h2>
