trying to fix spacing

--- a/minor-projects/automatic-differentiation/index.html
+++ b/minor-projects/automatic-differentiation/index.html
@@ -25,7 +25,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     <div class="column_grid right">
         <div class="content">
             <p style="text-align:left;">My full final project report can be accessed <a class="active" href="/minor-projects/automatic-differentiation/18_337_Final_Project_HollyJackson.pdf" target="_blank">here</a>.</p>
-            <p style="text-align:left;">The accompanying script is posted on <a class="active" href="https://github.com/hollyjackson/AutomaticDifferentiation" target="_blank">Github</a>.</p>
+            <p style="text-align:left;">The accompanying Julia script is posted on <a class="active" href="https://github.com/hollyjackson/AutomaticDifferentiation" target="_blank">Github</a>.</p>
         </div>
     </div>
 </div>
