--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -23,7 +23,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
                     <img src="/images/schematic.png" alt="Image Processing" style="width:100%">
                 </a>
             </div>
-            <h2><a class="inactive" href="/minor-projects/image-processing">Image Processing with a Microcontroller</a><br></h2>
+            <h2><a class="inactive" href="/minor-projects/image-processing">Image Processing with a Microcontroller</a><br><br></h2>
         </div>
     </div>
     <div class="column_grid">
