--- a/other-projects/index.html
+++ b/other-projects/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Side Projects
-description: 
+title: Other Projects
+description: Class projects, science fair projects, small blogs, etc.
 ---
 
 <div class="container">
